correcting vertical alignment

--- a/plugins/git/www/themes/default/css/style.css
+++ b/plugins/git/www/themes/default/css/style.css
@@ -205,7 +205,7 @@ button {
   font-size: 14px;
   line-height: 20px;
   color: #555555;
-  vertical-align: middle;
+  vertical-align: top;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
